--- a/vignettes/5.1-Area.md
+++ b/vignettes/5.1-Area.md
@@ -1,30 +1,35 @@
 5.1 Area
 ================
-Jaap Slootweg, Joris Quik
-2023-12-04
+Jaap Slootweg, Joris Quik, Valerie de Rijk
+2024-07-18
 
-# Nested areas
+### Calculation of area of SubCompartment within Scales
 
-## Calculation of area of SubCompartment within Scales
+In the R version the calculation of the scales is based on data input of
+TotalArea and FRACsea, from which AreaLand and AreaSea are calculated.
+Scales can be nested: e.g. by default the Regional and Continental scale
+are included in the Moderate scale.
 
-The calculation of area slightly differs from the excel version, also in
-preparation of a local scale, and the wish to be able to situate the
-Continental/Regional/Local system within Tropic, rather than fixed
-within Moderate. Therefor the TotalArea contains the area including
-possibly nested areas. This is different from SYSTEMAREA in the excel
-version. We initiate World and start from the data TotalArea and FRACsea
+The calculation of area slightly differs from the excel version. In
+theExcel version calculation of scales is the other way around for the
+regional and continental scale: AreaLand and AreaSea are data inputs
+from which the total system area is calculated. The way of calculating
+scales in the R version is more consistent across scales, and also makes
+adding additional scales (e.g. a local scale within regional) or
+changing the nesting of scales (e.g continental in tropic instead of
+moderate) more straightforward.
 
 ``` r
-source("baseScripts/initTestWorld.R")
+source("baseScripts/initWorld_onlyMolec.R")
 World$fetchData("TotalArea")
 ```
 
-    ##         Scale TotalArea
-    ## 1      Arctic  4.25e+13
-    ## 2 Continental  7.43e+12
-    ## 3    Moderate  8.50e+13
-    ## 4    Regional  2.30e+11
-    ## 5      Tropic  1.28e+14
+    ##         Scale   TotalArea
+    ## 1      Arctic 4.25000e+13
+    ## 2 Continental 7.42882e+12
+    ## 3    Moderate 8.50000e+13
+    ## 4    Regional 2.29570e+11
+    ## 5      Tropic 1.27500e+14
 
 ``` r
 World$fetchData("FRACsea")
@@ -37,15 +42,28 @@ World$fetchData("FRACsea")
     ## 4    Regional 0.00435597
     ## 5      Tropic 0.70000000
 
-## Nesting and splitting land and sea
+#### Nesting and splitting land and sea
 
-Regional and Arctic have no nested scale, and are straightforward
-calculation of AreaSea and AreaLand as resp. TotalArea\*FRACsea and
-TotalArea\*(1-FRACsea)
+Scales can be nested in other scales. TotalArea of a scale represent the
+total area of that scale, *including* the TotalArea of any scales nested
+within them. However, AreaLand and AreaSea represent the area of
+respectively land and sea of that scale *excluding* any nested scales.
 
-Continental contains Regional; the TotalArea of Continental is reduced
-by Regional, then the sea and land fraction are applied. Same procedure
-for Moderate with its nested Continental
+Therefore, the TotalArea of any nested scales is substracted before
+calculating AreaLand and AreaSea. For example, The TotalArea of
+Continental contains Regional. Therefore,the TotalArea of Continental is
+reduced by Regional, before the sea and land fraction are applied.
+Similarly, currently by default Continental is included in the Moderate
+scale, and its TotalArea is substracted from the TotalArea of the
+moderate scale before calculation of AreaLand and AreaSea. Note that the
+TotalArea of the Continental scale already includes the TotalArea of the
+Regional scale, so only TotalArea of the continental scale is
+substracted (and not also TotalArea of regional separately, as that
+would be double substracting the area of the regional scale).
+
+Regional and Arctic currently have no nested scale, and are
+straightforward calculation of AreaSea and AreaLand as respectively.
+TotalArea\*FRACsea and TotalArea\*(1-FRACsea)
 
 ``` r
 v_AreaSea <- World$NewCalcVariable("AreaSea")
@@ -57,24 +75,27 @@ merge(tAreaLand, tAreaSea)
 
     ##         Scale old_AreaLand     AreaLand  old_AreaSea      AreaSea
     ## 1      Arctic 1.700000e+13 1.700000e+13 2.550000e+13 2.550000e+13
-    ## 2 Continental 3.486002e+12 3.486002e+12 3.713998e+12 3.713998e+12
-    ## 3    Moderate 3.878500e+13 3.878500e+13 3.878500e+13 3.878500e+13
-    ## 4    Regional 2.289981e+11 2.289981e+11 1.001873e+09 1.001873e+09
-    ## 5      Tropic 3.840000e+13 3.840000e+13 8.960000e+13 8.960000e+13
+    ## 2 Continental 3.485840e+12 3.485840e+12 3.713410e+12 3.713410e+12
+    ## 3    Moderate 3.878559e+13 3.878559e+13 3.878559e+13 3.878559e+13
+    ## 4    Regional 2.285700e+11 2.285700e+11 1.000000e+09 1.000000e+09
+    ## 5      Tropic 3.825000e+13 3.825000e+13 8.925000e+13 8.925000e+13
 
-## Obvious and not so obvious variable references
+#### Variable references behind the scenes
 
-Variable are often tables, as can be seen above for the AreaLand
+*The part below gives an insight into the specific workings of the SBOO
+repository. This is not strictly necessary for understanding the
+workings of the model.*
+
+Variables are often tables, as can be seen above for the AreaLand
 variable. When a variable is applied in a “defining function” the SBoo
 system looks for the proper dimension, e.g. when it finds Arealand and
 it is calculating for Arctic it will use the AreaLand of Arctic. But
 when calculating for instance AreaSea for Continental we need TotalArea
-for both Continental AND Regional! How can we implement this in our
-defining function?
+for both Continental AND Regional!
 
-In such a case use the “all.” preposition. The function will receive the
-whole table for the variable at hand. As an example look the defining
-function for AreaSea:
+In such a case we can use the “all.” preposition. The function will
+receive the whole table for the variable at hand. As an example look at
+the defining function for AreaSea:
 
 ``` r
 AreaSea
@@ -104,41 +125,70 @@ AreaSea
     ##         return(AreaSea4Scale(ScaleName))
     ##     }
     ## }
-    ## <bytecode: 0x000001f3a5f68b48>
+    ## <bytecode: 0x563bdf57e268>
 
-## The areas to be used in further calculations
+#### The areas to be used in further calculations
 
-All Scale/SubCompart combinations (present in in states) have an area,
+AreaLand and AreaSea are used in the calculation of the areas of all
+Scale/SubCompart combinations. The calculation of the area differs per
+subcompartment. We therefore include SubCompartName as parameter in the
+defining function and use it to distinguish which formula applies (see
+the Area function below).
+
+landFRAC is the fraction that belongs to a specificic subcompartment
+(e.g. agricultural soil) of the total AREALand.
+
+All Scale/SubCompart combinations (present in states) have an area,
 including the subcompart “cloudwater”! It receives the same area as air,
 namely the sum of AreaSea and AreaLand for the scale at hand. For sea
-and for oceans, if present, the area equal that of AreaSea . Otherwise
+and for oceans, if present, the area equal that of AreaSea. Otherwise
 (different Subcompartments that add up to “AreaLand”) the calculation is
-straightforward (landFRAC \* AreaLand). Be aware that the definition of
-landFRAC differs from AREAFRAC; landFRAC is the fraction of the
-subcompartment of the AreaLand. With these different ways of calculation
-the formula to apply depends on the subcompartment, we need to apply
-another “trick”; we include SubCompartName as parameter in the defining
-function. We then use it to make the distinguish which formula applies.
-See the Area function below. In case you are not familiar with this:
-return() ends the function and “returns” its parameter. All different
-states are “peeled of” in order, and the last statements ensures that
-other cases (not existing states) are not included in calculations.
+straightforward (landFRAC \* AreaLand).
+
+Below we show the Area function.
+
+``` r
+World$fetchData("landFRAC")
+```
+
+    ##          Scale       SubCompart landFRAC
+    ## 13 Continental agriculturalsoil   0.6000
+    ## 18 Continental             lake   0.0025
+    ## 21 Continental      naturalsoil   0.2700
+    ## 22 Continental        othersoil   0.1000
+    ## 23 Continental            river   0.0275
+    ## 37    Regional agriculturalsoil   0.6000
+    ## 42    Regional             lake   0.0025
+    ## 45    Regional      naturalsoil   0.2700
+    ## 46    Regional        othersoil   0.1000
+    ## 47    Regional            river   0.0275
 
 ``` r
 Area
 ```
 
-    ## function (AreaLand, AreaSea, landFRAC, SubCompartName, ScaleName) 
+    ## function (AreaLand, AreaSea, landFRAC, all.landFRAC, SubCompartName, 
+    ##     ScaleName) 
     ## {
     ##     if (SubCompartName %in% c("air", "cloudwater")) {
     ##         return(AreaLand + AreaSea)
     ##     }
-    ##     if (SubCompartName == "sea") {
+    ##     if (SubCompartName %in% c("sea", "marinesediment")) {
     ##         return(AreaSea)
     ##     }
     ##     if (SubCompartName == "deepocean" & ScaleName %in% c("Arctic", 
     ##         "Moderate", "Tropic")) {
     ##         return(AreaSea)
+    ##     }
+    ##     if (SubCompartName == "lakesediment" & ScaleName %in% c("Regional", 
+    ##         "Continental")) {
+    ##         return(all.landFRAC$landFRAC[all.landFRAC$SubCompart == 
+    ##             "lake" & all.landFRAC$Scale == ScaleName] * AreaLand)
+    ##     }
+    ##     if (SubCompartName == "freshwatersediment" & ScaleName %in% 
+    ##         c("Regional", "Continental")) {
+    ##         return(all.landFRAC$landFRAC[all.landFRAC$SubCompart == 
+    ##             "river" & all.landFRAC$Scale == ScaleName] * AreaLand)
     ##     }
     ##     if (ScaleName %in% c("Regional", "Continental")) {
     ##         return(landFRAC * AreaLand)
@@ -148,12 +198,14 @@ Area
     ##     }
     ##     return(NA)
     ## }
-    ## <bytecode: 0x000001f3a4acaa88>
+    ## <bytecode: 0x563be0043620>
 
 ``` r
 v_Area <- World$NewCalcVariable("Area")
 tArea <- World$CalcVar("Area")
 ```
+
+#### Verification of size compartments
 
 Just taking the sum of areas grouped by scale would include double
 counting the subcompartments which are on top of each other, or mixed:
@@ -164,8 +216,20 @@ Arctic + Moderate + Tropic equals the total Area of air.
 TotAreaGlobalScales <- World$fetchData("TotalArea")
 TotAreaGlobalScales <- TotAreaGlobalScales$TotalArea[TotAreaGlobalScales$Scale %in% c(
   "Arctic","Moderate","Tropic")]
+print(TotAreaGlobalScales)
+```
+
+    ## [1] 4.250e+13 8.500e+13 1.275e+14
+
+``` r
 TotAir <- World$fetchData("Area")
 TotAir <- TotAir$Area[TotAir$SubCompart == "air"]
+print(TotAir)
+```
+
+    ## [1] 4.250000e+13 7.199250e+12 7.757118e+13 2.295700e+11 1.275000e+14
+
+``` r
 sum(TotAreaGlobalScales) == sum(TotAir)
 ```
 
