--- a/vignettes/5.3-FRACwas.md
+++ b/vignettes/5.3-FRACwas.md
@@ -1,9 +1,12 @@
 5.3 Volume FRACtions of phases in subcompartments
 ================
-Jaap Slootweg, Joris Quik
-2023-12-05
+Jaap Slootweg, Joris Quik, Valerie de Rijk
+2024-07-18
 
-## Volume fraction of water or air phase in a matrix
+### Volume fraction of water or air or solids in a matrix
+
+This vignette explains in more detail the fractions that were mentioned
+in vignette *4.0 partitioning*.
 
 A Subcompartment has a main matrix (medium); for soils and sediment this
 is “solids”. But both also contain water, and soil also contains a
@@ -15,158 +18,177 @@ determined by three variable defining functions. For example for soils
 and sediments FRACs is calculated:
 
 ``` r
+# first we have to initialize the World object
+source("baseScripts/initWorld_onlyMolec.R")
+```
+
+``` r
 World$fetchData("subFRACa")
 ```
 
     ##          Scale       SubCompart subFRACa
-    ## 5       Arctic      naturalsoil      0.2
-    ## 7  Continental agriculturalsoil      0.2
-    ## 14 Continental      naturalsoil      0.2
-    ## 15 Continental        othersoil      0.2
-    ## 22    Moderate      naturalsoil      0.2
-    ## 24    Regional agriculturalsoil      0.2
-    ## 31    Regional      naturalsoil      0.2
-    ## 32    Regional        othersoil      0.2
-    ## 39      Tropic      naturalsoil      0.2
+    ## 9       Arctic      naturalsoil      0.2
+    ## 13 Continental agriculturalsoil      0.2
+    ## 21 Continental      naturalsoil      0.2
+    ## 22 Continental        othersoil      0.2
+    ## 33    Moderate      naturalsoil      0.2
+    ## 37    Regional agriculturalsoil      0.2
+    ## 45    Regional      naturalsoil      0.2
+    ## 46    Regional        othersoil      0.2
+    ## 57      Tropic      naturalsoil      0.2
 
 ``` r
 World$fetchData("subFRACs")
 ```
 
     ##          Scale SubCompart subFRACs
-    ## 1       Arctic        air    2e-11
-    ## 8  Continental        air    2e-11
-    ## 18    Moderate        air    2e-11
-    ## 25    Regional        air    2e-11
-    ## 35      Tropic        air    2e-11
+    ## 2       Arctic        air    2e-11
+    ## 14 Continental        air    2e-11
+    ## 26    Moderate        air    2e-11
+    ## 38    Regional        air    2e-11
+    ## 50      Tropic        air    2e-11
 
 ``` r
 World$fetchData("subFRACw")
 ```
 
     ##          Scale         SubCompart subFRACw
-    ## 1       Arctic                air    2e-11
-    ## 4       Arctic     marinesediment    8e-01
-    ## 5       Arctic        naturalsoil    2e-01
-    ## 7  Continental   agriculturalsoil    2e-01
-    ## 8  Continental                air    2e-11
-    ## 10 Continental freshwatersediment    8e-01
-    ## 12 Continental       lakesediment    8e-01
-    ## 13 Continental     marinesediment    8e-01
-    ## 14 Continental        naturalsoil    2e-01
-    ## 15 Continental          othersoil    2e-01
-    ## 18    Moderate                air    2e-11
-    ## 21    Moderate     marinesediment    8e-01
-    ## 22    Moderate        naturalsoil    2e-01
-    ## 24    Regional   agriculturalsoil    2e-01
-    ## 25    Regional                air    2e-11
-    ## 27    Regional freshwatersediment    8e-01
-    ## 29    Regional       lakesediment    8e-01
-    ## 30    Regional     marinesediment    8e-01
-    ## 31    Regional        naturalsoil    2e-01
-    ## 32    Regional          othersoil    2e-01
-    ## 35      Tropic                air    2e-11
-    ## 38      Tropic     marinesediment    8e-01
-    ## 39      Tropic        naturalsoil    2e-01
+    ## 2       Arctic                air    2e-11
+    ## 8       Arctic     marinesediment    8e-01
+    ## 9       Arctic        naturalsoil    2e-01
+    ## 13 Continental   agriculturalsoil    2e-01
+    ## 14 Continental                air    2e-11
+    ## 17 Continental freshwatersediment    8e-01
+    ## 19 Continental       lakesediment    8e-01
+    ## 20 Continental     marinesediment    8e-01
+    ## 21 Continental        naturalsoil    2e-01
+    ## 22 Continental          othersoil    2e-01
+    ## 26    Moderate                air    2e-11
+    ## 32    Moderate     marinesediment    8e-01
+    ## 33    Moderate        naturalsoil    2e-01
+    ## 37    Regional   agriculturalsoil    2e-01
+    ## 38    Regional                air    2e-11
+    ## 41    Regional freshwatersediment    8e-01
+    ## 43    Regional       lakesediment    8e-01
+    ## 44    Regional     marinesediment    8e-01
+    ## 45    Regional        naturalsoil    2e-01
+    ## 46    Regional          othersoil    2e-01
+    ## 50      Tropic                air    2e-11
+    ## 56      Tropic     marinesediment    8e-01
+    ## 57      Tropic        naturalsoil    2e-01
 
 ``` r
 Fs <- World$NewCalcVariable("FRACs")
 World$CalcVar("FRACs")
 ```
 
-    ##            SubCompart       Scale FRACs
-    ## 3    agriculturalsoil    Regional 6e-01
-    ## 5    agriculturalsoil Continental 6e-01
-    ## 6                 air      Arctic 2e-11
-    ## 7                 air      Tropic 2e-11
-    ## 8                 air    Regional 2e-11
-    ## 9                 air Continental 2e-11
-    ## 10                air    Moderate 2e-11
-    ## 22 freshwatersediment Continental 2e-01
-    ## 24 freshwatersediment    Regional 2e-01
-    ## 32       lakesediment Continental 2e-01
-    ## 34       lakesediment    Regional 2e-01
-    ## 36     marinesediment      Arctic 2e-01
-    ## 37     marinesediment Continental 2e-01
-    ## 38     marinesediment    Moderate 2e-01
-    ## 39     marinesediment    Regional 2e-01
-    ## 40     marinesediment      Tropic 2e-01
-    ## 41        naturalsoil      Arctic 6e-01
-    ## 42        naturalsoil Continental 6e-01
-    ## 43        naturalsoil    Moderate 6e-01
-    ## 44        naturalsoil    Regional 6e-01
-    ## 45        naturalsoil      Tropic 6e-01
-    ## 46          othersoil Continental 6e-01
-    ## 49          othersoil    Regional 6e-01
+    ##          Scale         SubCompart old_FRACs FRACs
+    ## 1       Arctic                air     2e-11 2e-11
+    ## 2       Arctic     marinesediment     2e-01 2e-01
+    ## 3       Arctic        naturalsoil     6e-01 6e-01
+    ## 4  Continental   agriculturalsoil     6e-01 6e-01
+    ## 5  Continental                air     2e-11 2e-11
+    ## 6  Continental freshwatersediment     2e-01 2e-01
+    ## 7  Continental       lakesediment     2e-01 2e-01
+    ## 8  Continental     marinesediment     2e-01 2e-01
+    ## 9  Continental        naturalsoil     6e-01 6e-01
+    ## 10 Continental          othersoil     6e-01 6e-01
+    ## 11    Moderate                air     2e-11 2e-11
+    ## 12    Moderate     marinesediment     2e-01 2e-01
+    ## 13    Moderate        naturalsoil     6e-01 6e-01
+    ## 14    Regional   agriculturalsoil     6e-01 6e-01
+    ## 15    Regional                air     2e-11 2e-11
+    ## 16    Regional freshwatersediment     2e-01 2e-01
+    ## 17    Regional       lakesediment     2e-01 2e-01
+    ## 18    Regional     marinesediment     2e-01 2e-01
+    ## 19    Regional        naturalsoil     6e-01 6e-01
+    ## 20    Regional          othersoil     6e-01 6e-01
+    ## 21      Tropic                air     2e-11 2e-11
+    ## 22      Tropic     marinesediment     2e-01 2e-01
+    ## 23      Tropic        naturalsoil     6e-01 6e-01
 
-## Implementation for air
+#### Implementation for air
 
 This generalisation is extended to the solids and water fractions in
-air, formerly known as FRACears and FRACearw. FRACaers -\> FRACs for
-air, FRACaerw -\> FRACw for air.
+air. .
 
 An overview for the scale Regional. The NA are not calculated, but also
 not needed in further calculations of the partitioning between these
 phases.
 
 ``` r
-Fs <- World$NewCalcVariable("FRACa")
+Fa <- World$NewCalcVariable("FRACa")
 World$CalcVar("FRACa")
 ```
 
-    ##          SubCompart       Scale FRACa
-    ## 3  agriculturalsoil    Regional   0.2
-    ## 5  agriculturalsoil Continental   0.2
-    ## 6               air      Arctic   1.0
-    ## 7               air      Tropic   1.0
-    ## 8               air    Regional   1.0
-    ## 9               air Continental   1.0
-    ## 10              air    Moderate   1.0
-    ## 41      naturalsoil      Arctic   0.2
-    ## 42      naturalsoil Continental   0.2
-    ## 43      naturalsoil    Moderate   0.2
-    ## 44      naturalsoil    Regional   0.2
-    ## 45      naturalsoil      Tropic   0.2
-    ## 46        othersoil Continental   0.2
-    ## 49        othersoil    Regional   0.2
+    ##          Scale         SubCompart old_FRACa FRACa
+    ## 1       Arctic                air       1.0   1.0
+    ## 2       Arctic freshwatersediment       0.0   0.0
+    ## 3       Arctic       lakesediment       0.0   0.0
+    ## 4       Arctic     marinesediment       0.0   0.0
+    ## 5       Arctic        naturalsoil       0.2   0.2
+    ## 6  Continental   agriculturalsoil       0.2   0.2
+    ## 7  Continental                air       1.0   1.0
+    ## 8  Continental freshwatersediment       0.0   0.0
+    ## 9  Continental       lakesediment       0.0   0.0
+    ## 10 Continental     marinesediment       0.0   0.0
+    ## 11 Continental        naturalsoil       0.2   0.2
+    ## 12 Continental          othersoil       0.2   0.2
+    ## 13    Moderate                air       1.0   1.0
+    ## 14    Moderate freshwatersediment       0.0   0.0
+    ## 15    Moderate       lakesediment       0.0   0.0
+    ## 16    Moderate     marinesediment       0.0   0.0
+    ## 17    Moderate        naturalsoil       0.2   0.2
+    ## 18    Regional   agriculturalsoil       0.2   0.2
+    ## 19    Regional                air       1.0   1.0
+    ## 20    Regional freshwatersediment       0.0   0.0
+    ## 21    Regional       lakesediment       0.0   0.0
+    ## 22    Regional     marinesediment       0.0   0.0
+    ## 23    Regional        naturalsoil       0.2   0.2
+    ## 24    Regional          othersoil       0.2   0.2
+    ## 25      Tropic                air       1.0   1.0
+    ## 26      Tropic freshwatersediment       0.0   0.0
+    ## 27      Tropic       lakesediment       0.0   0.0
+    ## 28      Tropic     marinesediment       0.0   0.0
+    ## 29      Tropic        naturalsoil       0.2   0.2
 
 ``` r
-Fs <- World$NewCalcVariable("FRACw")
+Fw <- World$NewCalcVariable("FRACw")
 World$CalcVar("FRACw")
 ```
 
-    ##            SubCompart       Scale FRACw
-    ## 3    agriculturalsoil    Regional 2e-01
-    ## 5    agriculturalsoil Continental 2e-01
-    ## 6                 air      Arctic 2e-11
-    ## 7                 air      Tropic 2e-11
-    ## 8                 air    Regional 2e-11
-    ## 9                 air Continental 2e-11
-    ## 10                air    Moderate 2e-11
-    ## 22 freshwatersediment Continental 8e-01
-    ## 24 freshwatersediment    Regional 8e-01
-    ## 32       lakesediment Continental 8e-01
-    ## 34       lakesediment    Regional 8e-01
-    ## 36     marinesediment      Arctic 8e-01
-    ## 37     marinesediment Continental 8e-01
-    ## 38     marinesediment    Moderate 8e-01
-    ## 39     marinesediment    Regional 8e-01
-    ## 40     marinesediment      Tropic 8e-01
-    ## 41        naturalsoil      Arctic 2e-01
-    ## 42        naturalsoil Continental 2e-01
-    ## 43        naturalsoil    Moderate 2e-01
-    ## 44        naturalsoil    Regional 2e-01
-    ## 45        naturalsoil      Tropic 2e-01
-    ## 46          othersoil Continental 2e-01
-    ## 49          othersoil    Regional 2e-01
+    ##          Scale         SubCompart old_FRACw FRACw
+    ## 1       Arctic                air     2e-11 2e-11
+    ## 2       Arctic     marinesediment     8e-01 8e-01
+    ## 3       Arctic        naturalsoil     2e-01 2e-01
+    ## 4  Continental   agriculturalsoil     2e-01 2e-01
+    ## 5  Continental                air     2e-11 2e-11
+    ## 6  Continental freshwatersediment     8e-01 8e-01
+    ## 7  Continental       lakesediment     8e-01 8e-01
+    ## 8  Continental     marinesediment     8e-01 8e-01
+    ## 9  Continental        naturalsoil     2e-01 2e-01
+    ## 10 Continental          othersoil     2e-01 2e-01
+    ## 11    Moderate                air     2e-11 2e-11
+    ## 12    Moderate     marinesediment     8e-01 8e-01
+    ## 13    Moderate        naturalsoil     2e-01 2e-01
+    ## 14    Regional   agriculturalsoil     2e-01 2e-01
+    ## 15    Regional                air     2e-11 2e-11
+    ## 16    Regional freshwatersediment     8e-01 8e-01
+    ## 17    Regional       lakesediment     8e-01 8e-01
+    ## 18    Regional     marinesediment     8e-01 8e-01
+    ## 19    Regional        naturalsoil     2e-01 2e-01
+    ## 20    Regional          othersoil     2e-01 2e-01
+    ## 21      Tropic                air     2e-11 2e-11
+    ## 22      Tropic     marinesediment     8e-01 8e-01
+    ## 23      Tropic        naturalsoil     2e-01 2e-01
 
 ``` r
-allFrac <- Reduce(merge, list(World$fetchData("FRACa"), World$fetchData("FRACw"), World$fetchData("FRACs"))) %>%
-  dplyr::filter(Scale == "Regional") %>%
+allFrac <- Reduce(merge, list(World$fetchData("FRACa"), World$fetchData("FRACw"), World$fetchData("FRACs"))) |>
+  dplyr::filter(Scale == "Regional") |>
   pivot_longer(c(FRACa, FRACw, FRACs))
 
 allFrac <- full_join(as_tibble(World$fetchData("FRACa")),
-                     as_tibble(World$fetchData("FRACw")), by = c("SubCompart","Scale")) |> 
+                     as_tibble(World$fetchData("FRACw")), by = c("SubCompart","Scale")) |>
   full_join(as_tibble(World$fetchData("FRACs"))) |> filter(Scale=="Regional") |> print()
 ```
 
@@ -177,13 +199,13 @@ allFrac <- full_join(as_tibble(World$fetchData("FRACa")),
     ##   <chr>    <chr>              <dbl>         <dbl>         <dbl>
     ## 1 Regional agriculturalsoil    0.2  0.2           0.6          
     ## 2 Regional air                 1.00 0.00000000002 0.00000000002
-    ## 3 Regional naturalsoil         0.2  0.2           0.6          
-    ## 4 Regional othersoil           0.2  0.2           0.6          
-    ## 5 Regional freshwatersediment NA    0.8           0.2          
-    ## 6 Regional lakesediment       NA    0.8           0.2          
-    ## 7 Regional marinesediment     NA    0.8           0.2
+    ## 3 Regional freshwatersediment  0    0.8           0.2          
+    ## 4 Regional lakesediment        0    0.8           0.2          
+    ## 5 Regional marinesediment      0    0.8           0.2          
+    ## 6 Regional naturalsoil         0.2  0.2           0.6          
+    ## 7 Regional othersoil           0.2  0.2           0.6
 
-## colloidal and suspended matter in waters
+#### colloidal and suspended matter in waters
 
 For solids in water SB distinguishes colloidal and suspended matter.
 Therefore subFRACs for waters is not in the data; use the data for “COL”
@@ -195,14 +217,14 @@ World$fetchData("COL")
 ```
 
     ##            SubCompart   COL
-    ## 3  freshwatersediment 0.100
-    ## 4        lakesediment 0.100
-    ## 5      marinesediment 0.100
-    ## 6    agriculturalsoil 0.100
-    ## 7         naturalsoil 0.100
-    ## 8           othersoil 0.100
-    ## 9           deepocean 0.001
-    ## 10               lake 0.001
+    ## 1    agriculturalsoil 0.100
+    ## 4           deepocean 0.001
+    ## 5  freshwatersediment 0.002
+    ## 6                lake 0.001
+    ## 7        lakesediment 0.002
+    ## 8      marinesediment 0.002
+    ## 9         naturalsoil 0.100
+    ## 10          othersoil 0.100
     ## 11              river 0.001
     ## 12                sea 0.001
 
@@ -211,7 +233,7 @@ World$fetchData("SUSP")
 ```
 
     ##    SubCompart   SUSP
-    ## 9   deepocean 0.0050
-    ## 10       lake 0.0005
+    ## 4   deepocean 0.0050
+    ## 6        lake 0.0005
     ## 11      river 0.0150
     ## 12        sea 0.0050
